--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,6 +34,7 @@
     
     <!-- Additional Meta Tags -->
     <meta name="format-detection" content="telephone=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Shree Ganesh Real Estate" />
